# tagai

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
devagent/: .agentignore  __init__.py  agent.py  config.py  main.py  permissions.py  prompts.py  self_heal.py
devagent/tools/: __init__.py  git_tools.py
tagai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
